[Paragraph] fixed collapse animation

--- a/src/pages/_shared/Paragraph/Paragraph.scss
+++ b/src/pages/_shared/Paragraph/Paragraph.scss
@@ -123,17 +123,15 @@
 }
 
 .more-container {
-  visibility: hidden;
-  opacity: 0;
+  height: 0px;
+  overflow: hidden;
   width: 100%;
-  transform: translateY(-100%);
   z-index: -1;
   transition: all 0.5s;
-}
-
-.more-container-visible {
-  visibility: visible;
-  opacity: 1;
-  z-index: 1;
-  transform: translateY(0%);
+  .leftLine {
+    margin-bottom: 0.7rem;
+  }
+  .rightLine {
+    margin-bottom: 0.7rem;
+  }
 }
